[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/block/block.gd" type="Script" id=1]
[ext_resource path="res://assets/images/block.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/destroy-block.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "destroyed"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175, 0.2, 0.225, 0.25, 0.275, 0.3, 0.325, 0.35, 0.375, 0.4, 0.425, 0.45, 0.475 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 4, 5, 4, 5, 4, 5, 4, 5, 4, 5, 4, 5, 4, 5, 4, 5, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 16 ) ]
}

[node name="Block" type="Area2D" groups=[
"block",
]]
collision_layer = 8
collision_mask = 8
script = ExtResource( 1 )

[node name="main" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 6
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DownRay" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 10
collide_with_areas = true

[node name="destroyed_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
bus = "Sound"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 2 )
anims/destroyed = SubResource( 3 )
anims/fall_down = SubResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
